Modificaciones de tamaño

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 
         .color-picker {
             flex: 0 0 auto;
-     
+            width: 22vw;
+            height: 22vw;
             max-width: 100px;
             max-height: 100px;
-      
+            min-width: 30px;
+            min-height: 30px;
             margin: 5px;
             cursor: pointer;
             object-fit: contain;
