Nombre y alineado de canva

--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
-    <title>MURAL VIRTUAL</title>
+   <title>Mural Virtual, PIGMENTAR - Jardín Nº 906 - Carmen Diharce - 3F</title>
     <style>
         .rubik-600 {
             font-family: "Rubik", sans-serif;
