--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                 min-height: 60px;
             }
 
+            #canvas{
+                text-align: center;
+            }
+
             .color-picker {
                 width: 60px;
                 /* Ajusta el tamaño del colorPreview */
