--- a/index.html
+++ b/index.html
@@ -162,21 +162,22 @@
             }
 
             #colorPreview {
-                width: 60px;
+                width: 80px;
                 /* Ajusta el tamaño del colorPreview */
-                height: 60px;
+                height: 80px;
                 min-width: 60px;
                 min-height: 60px;
             }
 
             #canvas{
                 text-align: center;
+                margin: 0 auto;
             }
 
             .color-picker {
-                width: 60px;
+                width: 80px;
                 /* Ajusta el tamaño del colorPreview */
-                height: 60px;
+                height: 80px;
                 min-width: 60px;
                 min-height: 60px;
             }
