--- a/index.html
+++ b/index.html
@@ -324,38 +324,59 @@
 
         let painting = false;
 
-        function startPosition(e) {
-            painting = true;
-            draw(e);
-        }
+        function getEventPos(e) {
+    if (e.touches && e.touches.length > 0) {
+        return {
+            x: e.touches[0].clientX - canvas.getBoundingClientRect().left,
+            y: e.touches[0].clientY - canvas.getBoundingClientRect().top
+        };
+    } else {
+        return {
+            x: e.clientX - canvas.getBoundingClientRect().left,
+            y: e.clientY - canvas.getBoundingClientRect().top
+        };
+    }
+}
 
-        function endPosition() {
-            painting = false;
-            ctx.beginPath();
-        }
+function startPosition(e) {
+    // Evitar dibujar si el toque/clic no es en el canvas
+    if (e.target !== canvas) return;
 
-        function draw(e) {
-            if (!painting) return;
+    e.preventDefault();
+    painting = true;
+    draw(e);
+}
 
-            ctx.lineWidth = 5;
-            ctx.lineCap = "round";
-            ctx.strokeStyle = getLightenedColor();
+function endPosition(e) {
+    e.preventDefault();
+    painting = false;
+    ctx.beginPath();
+}
 
-            ctx.lineTo(e.clientX - canvas.offsetLeft, e.clientY - canvas.offsetTop);
-            ctx.stroke();
-            ctx.beginPath();
-            ctx.moveTo(e.clientX - canvas.offsetLeft, e.clientY - canvas.offsetTop);
-        }
+function draw(e) {
+    if (!painting) return;
+    e.preventDefault();
 
-        // Soporte para mouse
-        canvas.addEventListener("mousedown", startPosition);
-        canvas.addEventListener("mouseup", endPosition);
-        canvas.addEventListener("mousemove", draw);
+    const pos = getEventPos(e);
 
-        // Soporte para pantallas táctiles
-        canvas.addEventListener("touchstart", startPosition);
-        canvas.addEventListener("touchend", endPosition);
-        canvas.addEventListener("touchmove", draw);
+    ctx.lineWidth = 5;
+    ctx.lineCap = "round";
+    ctx.strokeStyle = getLightenedColor();
+
+    ctx.lineTo(pos.x, pos.y);
+    ctx.stroke();
+    ctx.beginPath();
+    ctx.moveTo(pos.x, pos.y);
+}
+
+
+  canvas.addEventListener("mousedown", startPosition);
+canvas.addEventListener("mouseup", endPosition);
+canvas.addEventListener("mousemove", draw);
+
+canvas.addEventListener("touchstart", startPosition, { passive: false });
+canvas.addEventListener("touchend", endPosition, { passive: false });
+canvas.addEventListener("touchmove", draw, { passive: false });
 
 
         addButton.addEventListener("click", () => {
