--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             background-image: url(./fondo1\ \(1\).jpg);
             background-size: cover;
             font-family: "Rubik", sans-serif;
+             overflow: hidden; 
         }
 
         #introScreen {
@@ -49,6 +50,8 @@
             display: block;
             margin: 0 auto;
             touch-action: none;
+              justify-content: center;
+    align-items: center;
         }
 
 
@@ -113,8 +116,8 @@
             }
 
             #colorPreview {
-                width: 50px;
-                height: 50px;
+                width: 60px;
+                height: 60px;
             }
 
             #artistName {
